########################################
# 2003-04-01 galculator 1.2.2 released #
########################################

2004-04-01 Simon Floery <chimaira@users.sf.net>
	* bugfix: inv, hyp button in form mode release (thanks to christian)
	* bugfix: rolldn, swapxy start new entry now (thanks to christian)
	* 0e+ -> 1e+ shortcut
	* bugfix: angle units in formula entry mode (thanks to andrew)
	* bugfix: add -> sum tooltip for translations (thanks to takeshi)
	* updated ja.po, de.po

########################################
# 2003-03-20 galculator 1.2.1 released #
########################################

2004-03-20 Simon Floery <chimaira@users.sf.net>
	* enable nested calls of flex_parser
	* fixed default user defined functions
	* error handling for flex_parser calls

2004-03-19 Simon Floery <chimaira@users.sf.net>
	* calc_basic.c: ALG_OBJECT

2004-03-17 Simon Floery <chimaira@users.sf.net>
	* implemented parser with flex
	* modified build process for flex
	* parser part - user defined functions

2004-03-14 Simon Floery <chimaira@users.sf.net>
	* fixed stack lifting in RPN mode (thanks to Christian)
	* GUI part - for user defined functions

2004-03-12 Simon Floery <chimaira@users.sf.net>
	* fixed general functions (brackets, rpn roll-swap) bug
	* pt_BR.po update

########################################
# 2003-03-11 galculator 1.2.0 released #
########################################

2004-03-11 Simon Floery <chimaira@users.sf.net>
	* updated ja.po, pt_BR.po

2004-02-28 Simon Floery <chimaira@users.sf.net>
	* updated de.po
	
2004-02-27 Simon Floery <chimaira@users.sf.net>
	* formula entry turns red on syntax error
	* parser improvements

2004-02-26 Simon Floery <chimaira@users.sf.net>
	* improved parser: factorial, complement

2004-02-18 Simon Floery <chimaira@users.sf.net>
	* improved parser: functions, whitespaces, constants

2004-02-17 Simon Floery <chimaira@users.sf.net>
	* check end_ptr in strtods.

2004-02-02 Simon Floery <chimaira@users.sf.net>